--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/1-bnxhrv0vqcqjqpze6escsq-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 120px; padding-bottom: 120px;">
 
-    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(71, 85, 119);">
+    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(65, 168, 95);">
     </div>
 
     <div class="container">
@@ -351,7 +351,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="xXoHys1yfWhqBZfDYuT2hGiDpXIq1By3ogPUCz9YqJOb5UWj45G7IeAtBalBXRgHyoa++mV/4oKB9dvetnZO3bL+C3MK9MGleEOMXT/EbQ2Yvfcr3Gk3JBZ16gLWAiyA" data-form-email="true">
+                                    <input type="hidden" value="J/RC1lSn048x3kJFhUbIPKg5qTNKAjLoSbi5hpbvJ9Tw3g9ml2RcWMB3MJ1b542wF2Qhj26ge5qkWp6wpEIH4RHbZhQdBuI2UFIA23C4J/3JU7zCOrzZQQvVYXzgr7Ce" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
