--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="156" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="156" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(65, 168, 95);">
     </div>
@@ -362,7 +362,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="wlXsmtkXLGExBM1nYHmdEXgyCjgryAfGRW6xqyVJm/bOGRzLMvpgLIBLV/QXp+PqNjswckiX1CB2gMqrEO2WbfZA8pYRH3UD1DAKA3YTv9gGDiWMc9A5HFCFUMH4TkXl" data-form-email="true">
+                                    <input type="hidden" value="cRT2bRkkCNKi70UU53SzNanwF8tact7U1hzTlP6xhUh8QLPAm+C4jrU4zqWccLmCppGnGx41I1oefjd9bTl10NEvhb3oOu7Eq3ImPoNiKZZN7S+ivD/YaxrDa7I8C1ji" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
