--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">About Us</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extHeader2-c">Investment</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://bittasia.exchange">Bittasia Instant Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">About Us</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html#custom-html-1s">Investment</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://bittasia.exchange">Bittasia Instant Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(65, 168, 95);">
     </div>
@@ -428,7 +428,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="3UxBNcgHZPDSpQj7yn5f3wy4qv10teLZQ6j0gBcbyz4qM3iPFjcjW226oi7DqOImGmzu9uHDUYw+AZ0ztt/DGKKVd/vWddltm6Cb8L7ieOrE8cbPUl4P+KVzQ4iYbFKw" data-form-email="true">
+                                    <input type="hidden" value="KB8mBGWD9Cfl3ZRCLK5dOyNskPCPahrawzvaijkQNM7KZTFHh0Eb3PUP0l/kI4k/HLxQjISTioLhvz0i/q2A87Z6y3MXtWAnUmRKkrRzVtDZ1274RJiLqJzafG3lPg2t" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
