--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website for free</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-1" data-rv-view="2" style="background-image: url(assets/images/hft-image-1500x1000.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(65, 168, 95);">
     </div>
@@ -76,7 +76,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Notices:</p><p>Bittasia Initial Exchange Offering will be starting on 01 March 2018. Limited public offering at 18,000,000 tokens. 1 BTSA Token = USD $1</p><p>1. Fast Instant Cryptocurrency Exchange</p><p>2. Revenue sharing investment opportunity (Limted !)</p><p><br></p><p>Daily global trading volume ~20 Billion.</p><p>Bittasia's target is daily trading volume of 100 M, which is 0.5% of the global daily volume.</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Notices:</p><p>Bittasia Initial Exchange Offering will be starting on 01 March 2018. Limited public offering at 18,000,000 tokens. 1 BTSA Token = USD $1</p><p>1. Fast Instant Cryptocurrency Exchange</p><p>2. Revenue sharing investment opportunity (Limted !)</p><p><br></p><p>Daily global trading volume ~20 Billion.</p><p>Bittasia's target is daily trading volume of 100 M, which is 0.5% of the global daily volume.</p><p><br></p><p><a href="index.html#custom-html-1s" class="text-danger">Bittasia 37.50% Real Monthly Return.&nbsp;</a><a href="index.html#custom-html-1s" class="text-primary">Calculate yout return HERE</a></p></blockquote></div>
         </div>
     </div>
 
@@ -428,7 +428,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Bittasia Investment Opportunity">
-                                    <input type="hidden" value="KB8mBGWD9Cfl3ZRCLK5dOyNskPCPahrawzvaijkQNM7KZTFHh0Eb3PUP0l/kI4k/HLxQjISTioLhvz0i/q2A87Z6y3MXtWAnUmRKkrRzVtDZ1274RJiLqJzafG3lPg2t" data-form-email="true">
+                                    <input type="hidden" value="pO2uaWcZYZcMbK8Y5N7633NDRKvsE3+1uw3eJPYKZtphHpQZExtUDgjY6rUpFT8mMC/smaccbChWNBT5zE2YSfKH+IR4KK1I6g+lXlK6zob7yljsDxbG8EysAoAA687J" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
                                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
